--- a/style.css
+++ b/style.css
@@ -1,4 +1,50 @@
-*{
+* {
     margin: 0;
     padding: 0;
+}
+
+body {
+    text-align: center;
+    background-color: #333;
+    color: white;
+}
+
+table {
+    margin: 20px auto;
+    border-collapse: collapse;
+    border-spacing: 5px;
+    font-weight: 800;
+}
+
+td {
+    width: 100px;
+    height: 100px;
+    font-size: 2em;
+    text-align: center;
+    border: 1px solid white;
+    cursor: pointer;
+}
+
+tr:first-child td {
+    border-top: none;
+}
+
+tr:last-child td {
+    border-bottom: none;
+}
+
+td:first-child {
+    border-left: none;
+}
+
+td:last-child {
+    border-right: none;
+}
+
+.circle {
+    color: blue;
+}
+
+.cross {
+    color: yellow;
 }
