--- a/style.css
+++ b/style.css
@@ -3,6 +3,15 @@
     padding: 0;
 }
 
+.game-content{
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
 body {
     text-align: center;
     background-color: #333;
@@ -21,7 +30,7 @@ td {
     height: 100px;
     font-size: 2em;
     text-align: center;
-    border: 1px solid white;
+    border: 3px solid white;
     cursor: pointer;
 }
 
@@ -41,10 +50,18 @@ td:last-child {
     border-right: none;
 }
 
-.circle {
-    color: blue;
+.circle svg path, .cross svg path {
+    stroke-dasharray: 300;
+    stroke-dashoffset: 0;
+    animation: draw 2s linear forwards;
 }
 
-.cross {
-    color: yellow;
+@keyframes draw {
+    from {
+        stroke-dasharray: 250;
+        stroke-dashoffset: 250;
+    }
+    to {
+        stroke-dashoffset: 0;
+    }
 }
